# R-GIANT

./: .gitignore  README.md  pyproject.toml  requirements.txt  roadmap.docx
batch_scripts/: batch_clean.py  batch_connectomes.py
data/adj_matrices/: 0001_0757_As.npz  0001_2430_As.npz
data/clean_mri/0001_0757/: 0001_0757_dwi_rotated.bvec
data/clean_mri/0001_2430/: 0001_2430_dwi_rotated.bvec
data/feature_matrices/: 0001_0757_X.npy
data/raw_mri/0001_0757/: 0001_0757_aparc+aseg.mgz  0001_0757_aseg.stats  0001_0757_brain.mgz  0001_0757_lh.aparc.stats  0001_0757_rh.aparc.stats
data/raw_mri/0001_2430/: 0001_2430_aparc+aseg.mgz  0001_2430_aseg.stats  0001_2430_brain.mgz  (+4 more)
data/torch_graphs/: 0001_0757_G.pt
install/: install_linux.sh  install_win.bat
rgiant/: cli.py
rgiant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rgiant/data/: dataloader.py  dataset.py  transforms.py  transforms2.py
rgiant/models/: gnn_baseline.py
rgiant/preprocessing/: cleaning.py  connectomes.py  graphs.py  nodes.py
rgiant/training/: train.py  utils.py
rgiant/utils/: json_loading.py  loading.py  logging.py
scripts/: QC_graphs.py  batch_graph.py  batch_label.py  batch_nodes.py  build_connectome.sh  build_connectome_parallel.sh  clean_array_job.sh  clean_dwi.sh  clean_dwi_batch_test.sh  connectome_array_parallel.sh  create_labels.py  failed_jobs.txt  gather_failed_job_ids.py  id_list.txt  id_list_test.txt  plot_node_feature_distributions.py  torch_install.py
src/batch_scripts/: batch_clean.py  batch_connectomes.py
src/oasis_data/: data_unpacker.py
src/preprocessing/: cleaning.py  connectomes.py  graphs.py  nodes.py
src/rgiant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/scripts/: build_ctx2reduced.py  create_json_mappings.py  get_sessions.py  get_ubique_labels.py  map_fs_names2graph_idxs.py  map_pup_ids2fs_ids.py  remove.py
src/unpacking/: data_unpacker.py  pup_ids2mr_ids.json
src/utils/: parcellation_mappings.json
tests/: test_dataloader.py  test_dataset.py
(+25 files in other folders)
