[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgiant"
version = "0.1.0"
description = "Graph-based neuroimaging pipeline for Alzheimer's analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Pieter van der Hoeven", email = "pietervanderhoeven98@gmail.com" }
]
dependencies = [
]

[project.scripts]
rgiant-batch = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]