[project]
name = "rgiant"
version = "0.1.0"
description = "R-GIANT: A connectome and preprocessing pipeline for neuroimaging DWI data."
readme = "README.md"
authors = [
  { name = "Pieter van der Hoeven", email = "pietervanderhoeven98@gmail.com" }
]

dependencies = [
  "dipy==1.10.0",
  "nibabel==5.3.2",
  "numpy<2.0",
  "scipy==1.15.2",
  "matplotlib==3.10.1",
  "HD_BET==2.0.1",
  "antspyx==0.5.4",
  "fury==0.12.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
rgiant-cli = "rgiant.cli:main"

[tool.setuptools]
packages = ["rgiant"]